Fix label z-index

--- a/src/scripts/components/map/stage/stage.scss
+++ b/src/scripts/components/map/stage/stage.scss
@@ -14,6 +14,11 @@
   transition: opacity 0.5s ease-in-out;
   width: max(1rem, var(--stage-width));
 
+  &:hover,
+  &:focus {
+    z-index: 1;
+  }
+
   &.display-none {
     display: none;
   }
